[gd_scene load_steps=29 format=2]

[ext_resource path="res://scroll.tres" type="Theme" id=1]
[ext_resource path="res://Assets/GUI/rightArrow.png" type="Texture" id=2]
[ext_resource path="res://Assets/GUI/leftArrow.png" type="Texture" id=3]
[ext_resource path="res://Assets/GUI/IconButton_Large_Orange_Circle.png" type="Texture" id=4]
[ext_resource path="res://Assets/GUI/Icon_X.png" type="Texture" id=5]
[ext_resource path="res://Assets/Fonts/therok-regular-400.otf" type="DynamicFontData" id=6]
[ext_resource path="res://Assets/Fonts/Kaph-Regular.otf" type="DynamicFontData" id=7]
[ext_resource path="res://Assets/GUI/Blue_Square.png" type="Texture" id=8]
[ext_resource path="res://Levels/PagbikasNgAlpabeto/LetterSpeak.gd" type="Script" id=9]
[ext_resource path="res://Assets/Fonts/Hussar-Print-A/HussarPrintA.otf" type="DynamicFontData" id=10]
[ext_resource path="res://Assets/ButtonsIcons/IconButton_Large_Green_Square.png" type="Texture" id=11]
[ext_resource path="res://Assets/GUI/IconButton_Large_Blue_Square.png" type="Texture" id=12]
[ext_resource path="res://Assets/ButtonsIcons/IconButton_Large_Red_Square.png" type="Texture" id=13]
[ext_resource path="res://Assets/GUI/IconButton_Large_Orange_Square.png" type="Texture" id=14]

[sub_resource type="Theme" id=1]

[sub_resource type="StyleBoxEmpty" id=12]

[sub_resource type="DynamicFont" id=6]
size = 58
use_mipmaps = true
use_filter = true
font_data = ExtResource( 10 )

[sub_resource type="StyleBoxEmpty" id=7]

[sub_resource type="StyleBoxEmpty" id=8]

[sub_resource type="StyleBoxEmpty" id=9]

[sub_resource type="StyleBoxEmpty" id=10]

[sub_resource type="StyleBoxEmpty" id=11]

[sub_resource type="DynamicFont" id=16]
size = 36
use_mipmaps = true
use_filter = true
font_data = ExtResource( 10 )

[sub_resource type="StyleBoxEmpty" id=13]

[sub_resource type="StyleBoxEmpty" id=14]

[sub_resource type="StyleBoxEmpty" id=15]

[sub_resource type="DynamicFont" id=2]
size = 55
outline_size = 2
outline_color = Color( 0.313726, 0.027451, 0.0627451, 1 )
use_filter = true
extra_spacing_char = -3
font_data = ExtResource( 7 )
fallback/0 = ExtResource( 6 )

[sub_resource type="DynamicFont" id=3]
size = 55
use_filter = true
extra_spacing_char = -3
font_data = ExtResource( 7 )
fallback/0 = ExtResource( 6 )

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 9 )
__meta__ = {
"_edit_lock_": true
}

[node name="bg" type="NinePatchRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 8 )
__meta__ = {
"_edit_lock_": true
}

[node name="ScrollContainer" type="ScrollContainer" parent="bg"]
unique_name_in_owner = true
anchor_left = -0.00390625
anchor_top = 0.165
anchor_right = 0.957031
anchor_bottom = 0.968333
theme = ExtResource( 1 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": true
}

[node name="Control" type="Control" parent="bg/ScrollContainer"]
margin_right = 1984.0
margin_bottom = 445.0
rect_min_size = Vector2( 1984, 445 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": true
}

[node name="HBoxContainer" type="HBoxContainer" parent="bg/ScrollContainer/Control"]
anchor_left = 0.0408266
anchor_top = 0.0382022
anchor_right = 1.21018
anchor_bottom = 0.364045
theme = SubResource( 1 )
custom_constants/separation = 45
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": true
}

[node name="LettersA" type="TextureRect" parent="bg/ScrollContainer/Control/HBoxContainer"]
margin_right = 150.0
margin_bottom = 145.0
rect_min_size = Vector2( 150, 0 )
texture = ExtResource( 11 )
expand = true
__meta__ = {
"_edit_lock_": true
}

[node name="Panel" type="Panel" parent="bg/ScrollContainer/Control/HBoxContainer/LettersA"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 9.0
custom_styles/panel = SubResource( 12 )
__meta__ = {
"_edit_lock_": true
}

[node name="Label" type="Label" parent="bg/ScrollContainer/Control/HBoxContainer/LettersA/Panel"]
anchor_left = 0.04
anchor_top = 0.0367647
anchor_right = 0.953333
anchor_bottom = 0.492647
custom_fonts/font = SubResource( 6 )
text = "Aa"
align = 1
valign = 2
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": true
}

[node name="a-g" type="Button" parent="bg/ScrollContainer/Control/HBoxContainer/LettersA/Panel"]
anchor_left = 0.12
anchor_top = 0.0514706
anchor_right = 0.906667
anchor_bottom = 0.845588
custom_styles/hover = SubResource( 7 )
custom_styles/pressed = SubResource( 8 )
custom_styles/focus = SubResource( 9 )
custom_styles/disabled = SubResource( 10 )
custom_styles/normal = SubResource( 11 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": true
}

[node name="Label2" type="Label" parent="bg/ScrollContainer/Control/HBoxContainer/LettersA/Panel"]
visible = false
anchor_left = 0.04
anchor_top = 0.529412
anchor_right = 0.953333
anchor_bottom = 0.823529
custom_fonts/font = SubResource( 16 )
text = "/ey/"
align = 1
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": true
}

[node name="Label3" type="Label" parent="bg/ScrollContainer/Control/HBoxContainer/LettersA/Panel"]
anchor_left = 0.04
anchor_top = 0.529412
anchor_right = 0.953333
anchor_bottom = 0.823529
custom_fonts/font = SubResource( 16 )
text = "/ah/"
align = 1
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": true
}

[node name="letterA" type="AudioStreamPlayer" parent="bg/ScrollContainer/Control/HBoxContainer/LettersA/Panel"]
unique_name_in_owner = true

[node name="LettersB" type="TextureRect" parent="bg/ScrollContainer/Control/HBoxContainer"]
margin_left = 195.0
margin_right = 345.0
margin_bottom = 145.0
rect_min_size = Vector2( 150, 0 )
texture = ExtResource( 13 )
expand = true
__meta__ = {
"_edit_lock_": true
}

[node name="Panel" type="Panel" parent="bg/ScrollContainer/Control/HBoxContainer/LettersB"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 10.0
custom_styles/panel = SubResource( 13 )
__meta__ = {
"_edit_lock_": true
}

[node name="Label" type="Label" parent="bg/ScrollContainer/Control/HBoxContainer/LettersB/Panel"]
visible = false
anchor_top = 0.267532
anchor_right = 1.00238
anchor_bottom = 0.750649
custom_fonts/font = SubResource( 6 )
text = "Hh-Nn"
align = 1
valign = 1
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": true
}

[node name="h-n" type="Button" parent="bg/ScrollContainer/Control/HBoxContainer/LettersB/Panel"]
anchor_left = 0.15
anchor_top = 0.145455
anchor_right = 0.840476
anchor_bottom = 0.825974
custom_styles/hover = SubResource( 7 )
custom_styles/pressed = SubResource( 8 )
custom_styles/focus = SubResource( 9 )
custom_styles/disabled = SubResource( 10 )
custom_styles/normal = SubResource( 11 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": true
}

[node name="LettersC" type="TextureRect" parent="bg/ScrollContainer/Control/HBoxContainer"]
margin_left = 390.0
margin_right = 540.0
margin_bottom = 145.0
rect_min_size = Vector2( 150, 0 )
texture = ExtResource( 14 )
expand = true
__meta__ = {
"_edit_lock_": true
}

[node name="Panel" type="Panel" parent="bg/ScrollContainer/Control/HBoxContainer/LettersC"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_styles/panel = SubResource( 14 )
__meta__ = {
"_edit_lock_": true
}

[node name="Label" type="Label" parent="bg/ScrollContainer/Control/HBoxContainer/LettersC/Panel"]
visible = false
anchor_top = 0.267532
anchor_right = 1.00238
anchor_bottom = 0.750649
custom_fonts/font = SubResource( 6 )
text = "Oo-Uu"
align = 1
valign = 1
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": true
}

[node name="o-u" type="Button" parent="bg/ScrollContainer/Control/HBoxContainer/LettersC/Panel"]
anchor_left = 0.15
anchor_top = 0.145455
anchor_right = 0.840476
anchor_bottom = 0.825974
custom_styles/hover = SubResource( 7 )
custom_styles/pressed = SubResource( 8 )
custom_styles/focus = SubResource( 9 )
custom_styles/disabled = SubResource( 10 )
custom_styles/normal = SubResource( 11 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": true
}

[node name="LettersD" type="TextureRect" parent="bg/ScrollContainer/Control/HBoxContainer"]
margin_left = 585.0
margin_right = 735.0
margin_bottom = 145.0
rect_min_size = Vector2( 150, 0 )
texture = ExtResource( 12 )
expand = true
__meta__ = {
"_edit_lock_": true
}

[node name="Panel" type="Panel" parent="bg/ScrollContainer/Control/HBoxContainer/LettersD"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_styles/panel = SubResource( 15 )
__meta__ = {
"_edit_lock_": true
}

[node name="Label" type="Label" parent="bg/ScrollContainer/Control/HBoxContainer/LettersD/Panel"]
visible = false
anchor_top = 0.267532
anchor_right = 1.00238
anchor_bottom = 0.750649
custom_fonts/font = SubResource( 6 )
text = "Vv-Zz"
align = 1
valign = 1
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": true
}

[node name="v-z" type="Button" parent="bg/ScrollContainer/Control/HBoxContainer/LettersD/Panel"]
anchor_left = 0.15
anchor_top = 0.145455
anchor_right = 0.840476
anchor_bottom = 0.825974
custom_styles/hover = SubResource( 7 )
custom_styles/pressed = SubResource( 8 )
custom_styles/focus = SubResource( 9 )
custom_styles/disabled = SubResource( 10 )
custom_styles/normal = SubResource( 11 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": true
}

[node name="alphabet" type="Label" parent="bg"]
anchor_left = 0.0634766
anchor_top = 0.0233333
anchor_right = 0.911133
anchor_bottom = 0.148333
custom_colors/font_color = Color( 0.886275, 0.317647, 0.27451, 1 )
custom_colors/font_color_shadow = Color( 0.580392, 0.247059, 0.286275, 1 )
custom_constants/shadow_offset_x = 1
custom_constants/shadow_offset_y = 4
custom_fonts/font = SubResource( 2 )
text = "Alpabetong Pagbigkas"
align = 1
valign = 1
autowrap = true
clip_text = true
uppercase = true
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": true
}

[node name="alphabet" type="Label" parent="bg/alphabet"]
anchor_top = -0.0193965
anchor_right = 1.0
anchor_bottom = 1.02938
custom_colors/font_color = Color( 1, 0.643137, 0.215686, 1 )
custom_constants/shadow_offset_x = 3
custom_constants/shadow_offset_y = 5
custom_fonts/font = SubResource( 3 )
text = "Alpabetong Pagbigkas"
align = 1
valign = 1
autowrap = true
clip_text = true
uppercase = true
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": true
}

[node name="LeftButton" type="Button" parent="bg"]
anchor_left = 0.015625
anchor_top = 0.463333
anchor_right = 0.0712891
anchor_bottom = 0.68
focus_mode = 0
enabled_focus_mode = 0
icon = ExtResource( 3 )
flat = true
expand_icon = true
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": true
}

[node name="RightButton" type="Button" parent="bg"]
anchor_left = 0.935547
anchor_top = 0.463333
anchor_right = 0.991212
anchor_bottom = 0.68
focus_mode = 0
enabled_focus_mode = 0
icon = ExtResource( 2 )
flat = true
expand_icon = true
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": true
}

[node name="GoBackButton" type="Button" parent="bg"]
anchor_left = 0.904297
anchor_top = 0.02
anchor_right = 0.987305
anchor_bottom = 0.16
size_flags_horizontal = 3
size_flags_vertical = 3
icon = ExtResource( 4 )
flat = true
icon_align = 1
expand_icon = true
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": true
}

[node name="pressedX" type="TextureRect" parent="bg/GoBackButton"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 23.0
margin_top = 19.0
margin_right = -22.0
margin_bottom = -23.0
texture = ExtResource( 5 )
expand = true
__meta__ = {
"_edit_lock_": true
}

[connection signal="pressed" from="bg/ScrollContainer/Control/HBoxContainer/LettersA/Panel/a-g" to="." method="_on_ag_pressed"]
[connection signal="pressed" from="bg/ScrollContainer/Control/HBoxContainer/LettersB/Panel/h-n" to="." method="_on_hn_pressed"]
[connection signal="pressed" from="bg/ScrollContainer/Control/HBoxContainer/LettersC/Panel/o-u" to="." method="_on_ou_pressed"]
[connection signal="pressed" from="bg/ScrollContainer/Control/HBoxContainer/LettersD/Panel/v-z" to="." method="_on_vz_pressed"]
[connection signal="pressed" from="bg/LeftButton" to="." method="_on_LeftButton_pressed"]
[connection signal="pressed" from="bg/RightButton" to="." method="_on_RightButton_pressed"]
[connection signal="pressed" from="bg/GoBackButton" to="." method="_on_GoBackButton_pressed"]
